app/Info.plist:macos Xcode@12.4 x86_64

--- a/3-packaging-a-mac-app/app/Info.plist
+++ b/3-packaging-a-mac-app/app/Info.plist
@@ -20,6 +20,8 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.utilities</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
@@ -27,6 +29,6 @@
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>RustBinaryName</key>
-	<string>3-packaging-a-mac-app</string>
+	<string>packaging-a-mac-app</string>
 </dict>
 </plist>
