3-packaging-a-mac-app:macos Xcode@12.4 x86_64

--- a/3-packaging-a-mac-app/Makefile
+++ b/3-packaging-a-mac-app/Makefile
@@ -9,7 +9,8 @@ clean:## 	cargo clean
 	@cargo clean
 
 release:## 	cargo build --release
-	@cargo build --release
+	@cargo build --target=aarch64-apple-darwin --target=x86_64-apple-darwin --release || cargo build --release
+
 
 app:## 	cd app && xcodebuild
-	@cd app && xcodebuild
+	@cd app && xcodebuild -arch x86_64 -arch Arm64
